# ostreeinit

./: .gitignore  Makefile  Makefile.test  README.md  autoinit.c  autoinit.spec.in  init.c  initrd_files.txt  meson.build  meson_options.txt  ostreeinit-mkinitrd  ostreeinit.c  ostreeinit.spec  ostreeinit.spec.in  ostreeinit_mkinitrd.sh  prepare-root.conf
dracut/: module-setup.sh
localtest/: Makefile  autoinit-mkinitrd  ostreeinit-mkinitrd
tools/: dist.sh  run-clang-format
